[package]
name = "aoc"
version = "0.1.0"
authors = ["Florian Rohm <florian.rohm@tngtech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ['intcode','day1', 'day2', 'day3', 'day4', 'day5', 'day6', 'day7', 'day8']